add some changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,10 @@
         android:textColor="@color/black"/>
 
     <Button
+        android:id="@+id/go_to_second_screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/go_to_second_screen"/>
+        android:text="@string/go_to_second_screen"
+        android:onClick="openSecondScreen"/>
 
 </LinearLayout>
