--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,6 +8,15 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/lesson"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
+
     <EditText
         android:id="@+id/lesson_name_input"
         android:layout_width="match_parent"
@@ -18,13 +27,11 @@
         android:hint="@string/type_lesson_name"
         android:inputType="text"/>
 
-    <TextView
-        android:id="@+id/lesson"
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:textColor="@color/black"/>
+        android:text="@string/close"
+        android:id="@+id/save_tbn"
+        android:onClick="closeButton"/>
 
 </LinearLayout>
