--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,20 +8,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/lesson"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:textColor="@color/black"/>
-
     <EditText
         android:id="@+id/lesson_name_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:hint="@string/type_lesson_name"
